--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
     <main class="container-fluid">
         <!-- WhatsApp Button -->
-        <div class="whatsappButton">
+        <div id="whatsappButton">
           <a target="_blank" href="https://wa.me/5547988514546?text=Eu+vim+pelo+site+e+gostaria+de+saber+mais%21">
             <i class="fa-brands fa-whatsapp" style="color: #fcfcfc"></i>
           </a>
@@ -313,13 +313,13 @@
                   <input type="text" class="form-control form-input" name="nome" id="name-input" placeholder="Nome" required>
                 </div>
                 <div class="mb-3">
-                  <input type="email" class="form-control form-input" name="nome" id="email-input" placeholder="Seu e-mail" requires>
+                  <input type="email" class="form-control form-input" name="nome" id="email-input" placeholder="Seu e-mail" required>
                 </div>
                 <div class="mb-3">
-                  <input type="tel" class="form-control form-input" name="nome" id="tel-input" placeholder="Telefone" requires>
+                  <input type="tel" class="form-control form-input" name="nome" id="tel-input" placeholder="Telefone" required>
                 </div>
                 <div class="mb-3">
-                  <textarea class="form-control" id="textArea" rows="4" placeholder="Digite sua mensagem"></textarea>
+                  <textarea class="form-control" id="textArea" rows="4" placeholder="Digite sua mensagem" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-outline-dark">Enviar</button>
               </form>
