--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                 </div>
                 <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-2 d-flex align-items-center justify-content-center" id="text-col-3">
                   <div class="content-3">
-                    <h2>Dobradora e Coladora Automática 4,6</h2>
-                    <p>Esta máquina automatizada realiza dobragem e colagem de papelão ondulado com facilidade, oferecendo qualidade excepcional e personalização para suas embalagens. Com capacidade para lidar com papelão de até 4,6 pontos de espessura, esta máquina é a escolha ideal para produções em larga escala.</p>
+                    <h2>Dobradora e Coladora Automática 4.6</h2>
+                    <p>Esta máquina automatizada realiza dobragem e colagem de papelão ondulado com facilidade, oferecendo qualidade excepcional e personalização para suas embalagens. Com capacidade para lidar com papelão de até 4.6 pontos de espessura, esta máquina é a escolha ideal para produções em larga escala.</p>
                     <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
                   </div>
                 </div>
@@ -139,8 +139,8 @@
               <div class="col-12 col-md-6 d-flex align-items-center">
                 <div class="content-about-us">
                   <h2 class="text-center">ESTAMOS NO NEGÓCIO HÁ MAIS DE 65 ANOS</h2>
-                  <p class="text-center">A Jia Long Pack foi fundada em 1958, e com seu trabalho dedicado deu os primeiros passos na produção de máquinas de encartuchamento.</p>
-                  <p class="text-center">Inicialmente, trata do aprimoramento de soluções já existentes dos fabricantes japoneses e, no final da década de oitenta, passou a desenvolver soluções próprias para linhas de Corrugadoras.</p>
+                  <p class="text-center">A Jia Long Pack foi fundada em 1958 e, com seu trabalho dedicado, deu os primeiros passos na produção de máquinas de encartuchamento.</p>
+                  <p class="text-center">No início tratou do aprimoramento de soluções já existentes dos fabricantes japoneses e, no final da década de oitenta, passou a desenvolver soluções próprias para linhas de Corrugadoras.</p>
                 </div>
               </div>  
             </div>
@@ -153,8 +153,8 @@
             <div class="row row-about-us row-tradition">
               <div class="col-md-12 col-lg-6 order-1 d-flex justify-content-center align-items-center" id="grid-right-tradition">
                   <div class="">
-                    <h2 class="text-white text-center">QUAL O DIFERENCIAL?</h2>
-                    <p class="text-center m-auto">Décadas de experiência com as mais diversas solicitações de clientes ao redor do mundo nos incentivaram a construir uma marca forte e estável baseada em fortes atributos, como:</p>
+                    <h2 class="text-white text-center">QUAL NOSSO DIFERENCIAL?</h2>
+                    <p class="text-center m-auto">Décadas de experiência com as mais diversas solicitações de clientes ao redor do mundo nos incentivaram a construir uma marca forte e estável baseada sólidos atributos, como:</p>
                   </div>
               </div>
               <div class="col-md-12 col-lg-6 order-2" id="grid-left-tradition">
@@ -166,19 +166,19 @@
                 </div>
                   <div class="box top">
                     <h3 class="text-white">Tradição</h3>
-                    <p>Por mais de quatro décadas, cooperamos com sucesso com clientes em todo o mundo.</p>
+                    <p>Por mais de quatro décadas, cooperamos com sucesso de clientes em todo o mundo.</p>
                   </div>
                   <div class="box">
                     <h3 class="text-white">Confiabilidade</h3>
-                    <p>Respeitamos todos os prazos acordados, as suas ideias e sugestões.</p>
+                    <p>Respeitamos todos os prazos acordados, suas ideias e sugestões.</p>
                   </div>
                   <div class="box">
                     <h3 class="text-white">Inovação</h3>
-                    <p>Estamos constantemente melhorando a tecnologia e introduzindo novos produtos em nossos produtos.</p>
+                    <p>Estamos constantemente melhorando a tecnologia e introduzindo novos produtos ao mercado.</p>
                   </div>
                   <div class="box bottom" id="lastTradicao">
                     <h3 class="text-white">Eficiência</h3>
-                    <p>Um serviço rápido, confiável e eficiente é um dos nossos maiores benefícios.</p>
+                    <p>Um serviço rápido, confiável e eficiente são um dos nossos maiores benefícios.</p>
                   </div>
               </div>
           </div> 
