--- a/index.html
+++ b/index.html
@@ -309,21 +309,21 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-6 col-form">
-              <form>
+              <form action="https://formsubmit.co/ajax/joaomarcosmr4@gmail.com" method="POST" data-form>
                 <h3 class="mb-4 texto-com-linha">Entre em Contato Conosco</h3>
                 <div class="mb-3">
-                  <input type="text" class="form-control form-input" name="nome" id="name-input" placeholder="Nome" required>
+                  <input type="text" class="form-control form-input" name="name" id="name-input" placeholder="Nome" required>
                 </div>
                 <div class="mb-3">
-                  <input type="email" class="form-control form-input" name="nome" id="email-input" placeholder="Seu e-mail" required>
+                  <input type="email" class="form-control form-input" name="email" id="email-input" placeholder="Seu e-mail" required>
                 </div>
                 <div class="mb-3">
-                  <input type="tel" class="form-control form-input" name="nome" id="tel-input" placeholder="Telefone" required>
+                  <input type="tel" class="form-control form-input" name="tel" id="tel-input" placeholder="Telefone" required>
                 </div>
                 <div class="mb-3">
                   <textarea class="form-control" id="textArea" rows="4" placeholder="Digite sua mensagem" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-outline-dark">Enviar</button>
+                <button type="submit" class="btn btn-outline-dark" data-button>Enviar</button>
               </form>
             </div>
             <div class="col-12 col-md-6">
@@ -347,7 +347,7 @@
         <div class="container">
           <div class="footer-content">
             <p class="footer-index text-center">
-              <a href="">Políticas de Privacidade</a> | <a href="">Termos de Uso</a><br>
+              <a href="/termosdeuso.html">Políticas de Privacidade</a> | <a href="/politicasdeprivacidade.html">Termos de Uso</a><br>
               <a class="mt-4" href="https://jrmtecnologia.com"><strong>JIA LONG ©</strong></a> 2023 - Desenvolvido por: <a href="https://jrmtecnologia.com"><strong>JRM Tecnologia</strong></a>
             </p>
           </div>
@@ -360,5 +360,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="js/animationNav.js"></script>
     <script src="js/animationAll.js"></script>
+    <script src="js/form.js"></script>
 </body>
 </html>
