--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                   <input type="tel" class="form-control form-input" name="tel" id="tel-input" placeholder="Telefone" required>
                 </div>
                 <div class="mb-3">
-                  <textarea class="form-control" id="textArea" rows="4" placeholder="Digite sua mensagem" required></textarea>
+                  <textarea class="form-control" id="textArea" rows="4" placeholder="Digite sua mensagem" required text-area></textarea>
                 </div>
                 <button type="submit" class="btn btn-outline-dark" data-button>Enviar</button>
               </form>
