--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <div class="mb-3">
                   <input type="tel" class="form-control form-input" name="tel" id="tel-input" placeholder="Telefone" required>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" id="divText">
                   <textarea class="form-control" id="textArea" rows="4" placeholder="Digite sua mensagem" required text-area></textarea>
                 </div>
                 <button type="submit" class="btn btn-outline-dark" data-button>Enviar</button>
