--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 </head>
 <body>
+  <div id="inicio"></div>
     <header class="fixed-top">
         <nav class="navbar navbar-expand" id="navbarTop">
         </nav>
@@ -36,22 +37,22 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#inicio">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#arrow-down">Produtos</a>
+                    <a class="nav-link" href="#products">Produtos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#text-col-4">Sobre Nós</a>
+                    <a class="nav-link" href="#sobre-nos">Sobre Nós</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#lastTradicao">Youtube</a>
+                    <a class="nav-link" href="#youtube">Youtube</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#video6">Resultados</a>
+                    <a class="nav-link" href="#resultados">Resultados</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#col-gallery">Contate-nos</a>
+                    <a class="nav-link" href="#contate-nos">Contate-nos</a>
                   </li>
                 </ul>
               </div>
@@ -71,7 +72,7 @@
             <div class="container">
                 <h1 class="text-center main-text">Jia Long Pack</h1>
                 <p class="text-center main-text">Desde 1958 produzindo máquinas de encartuchamento</p>
-                <p class="text-center"><i class="fa-solid fa-angle-down" id="arrow-down" style="color: #F2D422;"></i></p>
+                <p class="text-center"><i class="fa-solid fa-angle-down" id="products" style="color: #F2D422;"></i></p>
             </div>
         </section>
         <!-- End Main Banner -->
@@ -87,7 +88,7 @@
                   <div class="content-1">
                     <h2>Impressora Flexográfica</h2>
                     <p>A FlexoPrinter é uma impressora versátil e eficiente. Com sua tecnologia flexográfica de ponta, imprime com precisão e qualidade excepcional em uma variedade de materiais. Aumente a produtividade e eleve a qualidade de suas impressões com nossa solução de impressão flexível e confiável.</p>
-                    <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
+                    <a href="#contact-us-section" class="btn btn-outline-dark">Contate-nos</a>
                   </div>
                 </div>
               </div>
@@ -99,7 +100,7 @@
                   <div class="content-2">
                     <h2>Corrugadora de Papelão Ondulado Laminado</h2>
                     <p>Esta máquina de última geração proporciona uma produção contínua e eficaz de embalagens de papelão ondulado laminado, garantindo resistência e qualidade superior. Ideal para quem busca embalagens personalizadas e de alto desempenho, esta solução inovadora oferece eficiência e confiabilidade incomparáveis.</p>
-                    <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
+                    <a href="#contact-us-section" class="btn btn-outline-dark">Contate-nos</a>
                   </div>
                 </div>
               </div>
@@ -111,7 +112,7 @@
                   <div class="content-3">
                     <h2>Dobradora e Coladora Automática 4.6</h2>
                     <p>Esta máquina automatizada realiza dobragem e colagem de papelão ondulado com facilidade, oferecendo qualidade excepcional e personalização para suas embalagens. Com capacidade para lidar com papelão de até 4.6 pontos de espessura, esta máquina é a escolha ideal para produções em larga escala.</p>
-                    <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
+                    <a href="#contact-us-section" class="btn btn-outline-dark">Contate-nos</a>
                   </div>
                 </div>
             </div>
@@ -119,11 +120,11 @@
               <div class="col-12 order-1 col-md-6 col-sm-7 order-sm-2 d-flex align-items-center justify-content-center" id="img-col">
                 <img src="img/sample-maker.png" class="img-product-right img-fluid">
               </div>
-              <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-1 d-flex align-items-center justify-content-center" id="text-col-4">
+              <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-1 d-flex align-items-center justify-content-center" id="sobre-nos">
                 <div class="content-4">
                   <h2>Máquina de Protótipos S</h2>
                   <p>Esta linha de máquinas de última geração é projetada para transformar conceitos em realidade, permitindo a produção eficiente e precisa de protótipos e amostras. Cortando, vincando e perfurando uma variedade de materiais, desde papelão até plástico, essa série oferece flexibilidade e qualidade incomparáveis. Ideal para designers e fabricantes que valorizam a excelência.</p>
-                  <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
+                  <a href="#contact-us-section" class="btn btn-outline-dark">Contate-nos</a>
                 </div>
               </div>
             </div>
@@ -176,7 +177,7 @@
                     <h3 class="text-white">Inovação</h3>
                     <p>Estamos constantemente melhorando a tecnologia e introduzindo novos produtos ao mercado.</p>
                   </div>
-                  <div class="box bottom" id="lastTradicao">
+                  <div class="box bottom" id="youtube">
                     <h3 class="text-white">Eficiência</h3>
                     <p>Um serviço rápido, confiável e eficiente são um dos nossos maiores benefícios.</p>
                   </div>
@@ -223,7 +224,7 @@
                 <iframe width="360" height="202" src="https://www.youtube.com/embed/csQAcEL7QkI" title="Auto Slotter" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-videos">
+            <div class="col-12 col-md-4 col-videos" id="resultados">
               <div class="box-video" id="video6">
                 <iframe width="360" height="202" src="https://www.youtube.com/embed/Lq2AuByNPtw" title="Flexo Printer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
@@ -294,7 +295,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6 order-1 order-md-2 d-flex align-items-center" id="col-gallery">
-              <div class="box-content">
+              <div class="box-content" id="contate-nos">
                 <h2 class="text-white">Resultado de Nossas Máquinas</h2>
                 <p class="text-white">Descubra a excelência em cada detalhe através do nosso carrossel de produtos. Admire a qualidade impecável e o design deslumbrante de embalagens feitas por nossas máquinas, mostrando a maestria em cada peça.</p>
               </div>
@@ -361,5 +362,6 @@
     <script src="js/animationNav.js"></script>
     <script src="js/animationAll.js"></script>
     <script src="js/form.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html>
