--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <nav class="navbar navbar-expand-lg d-flex align-items-center justify-content-center" id="navbarBottom">
             <div class="container container-nav">
-              <a href="#">
+              <a href="https://jialongpack.com.br">
                 <img src="img/logo-jia-long-pack.png" alt="" class="img img-logo">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
